Bug 285153 - kmail2: missing filename entry in message body after

deleting attachment

Fixed as on thunderbird.

BUG: 285153
BUG: 299497

FIXED-IN: 4.8.5